to host www.newhi-tech.com

--- a/conf/nginx.conf
+++ b/conf/nginx.conf
@@ -55,9 +55,16 @@ local gbc = cc.import("#gbc")
 cc.exports.nginxBootstrap = gbc.NginxBootstrap:new(appKeys, globalConfig)
 
 ';
+    server
+    {
+        listen      80 ;
+        server_name www.newhi-tech.com;
+        index index.html index.htm;   
+        root _GBC_CORE_ROOT_/webroot;
+    } 
 
     server {
-        listen 8088 so_keepalive=on;
+        gbc_listen 8088 so_keepalive=on;
 
         location = /nginx_status {
             stub_status;
@@ -66,9 +73,9 @@ cc.exports.nginxBootstrap = gbc.NginxBootstrap:new(appKeys, globalConfig)
             deny all;
         }
 
-        # apps
-        # DO NOT MODIFY BELOW LINES
-        #_INCLUDE_APPS_ENTRY_
+# apps
+# DO NOT MODIFY BELOW LINES
+#_INCLUDE_APPS_ENTRY_
     }
 
 }
